--- a/develop/blocks/account-layout/account-layout.pug
+++ b/develop/blocks/account-layout/account-layout.pug
@@ -6,14 +6,18 @@ mixin account-layout()
                 +e.ASIDE.sidebar
                     +page-navigation('small')
                         +e.A.link(href='#') Мониторинг
-                        +e.A.link.--notify(href='#') Документы
+                        +e.A.link(href='#') Документы
+                            +e.notify(data-tippy-content='') !
                         +e.A.link(href='#') Новости
                         +e.A.link.active.current(href='#') Реквизиты
-                        +e.A.link.--notify(href='#') Рекомендовать друга
+                        +e.A.link(href='#') Рекомендовать друга
+                            +e.notify(data-tippy-content='') !
                         +e.A.link(href='#') Мониторинг
-                        +e.A.link.--notify(href='#') Документы
+                        +e.A.link(href='#') Документы
+                            +e.notify(data-tippy-content='') !
                         +e.A.link(href='#') Новости
                         +e.A.link(href='#') Реквизиты
-                        +e.A.link.--notify(href='#') Рекомендовать друга
+                        +e.A.link(href='#') Рекомендовать друга
+                            +e.notify(data-tippy-content='') !
                 +e.MAIN.main
                     block
