new logic and styles for profit- and object-calc

--- a/develop/blocks/object-location/object-location.scss
+++ b/develop/blocks/object-location/object-location.scss
@@ -144,6 +144,10 @@
             width: 60%;
             padding-right: 45px;
             margin-bottom: 0;
+
+            &.full {
+                width: 100%;
+            }
         }
     }
 }
