--- a/develop/blocks/object-calc/object-calc.pug
+++ b/develop/blocks/object-calc/object-calc.pug
@@ -14,7 +14,7 @@ mixin object-calc()
                 //- +e.income-range
                 +e.image
                     img(src='images/redesign/object-cards/object1.jpg', alt="")
-                +e.income-data(data-min='300000' data-max='18000000' data-liberty-step='85000' data-step='100000' data-initial='2000000' data-rate='12.8')
+                +e.income-data(data-min='300000' data-max='18000000' data-liberty-step='85000' data-step='100000' data-initial='2000000' data-payout='72000')
                     +e.data-row
                         +e.data-label Ежемесячный доход
                         +e.data-value.__income
@@ -33,6 +33,6 @@ mixin object-calc()
                     +e.data-row
                         +e.data-label Доходность
                         +e.data-value.__rate
-                            span.value(contenteditable='true') 12.8
+                            span.value 12.8
                             span.suffix %
                     +e.BUTTON.button.btn(type='button') Оставить заявку
