--- a/develop/blocks/profit-calc/profit-calc.pug
+++ b/develop/blocks/profit-calc/profit-calc.pug
@@ -25,13 +25,13 @@ mixin profit-calc()
                         div Дикси
                     +e.objects-slider
                         +e.objects-slide
-                            +profit-object(1, 'ТЦ «Эко Видное»', '12.8', '13.8')(data-min='363298', data-max='943048232' data-step='363298' data-rate='10.4' data-link='object-page1.html')
+                            +profit-object(1, 'ТЦ «Эко Видное»', '12.8', '13.8')(data-min='363298', data-max='943048232' data-step='363298' data-payout='72000' data-link='object-page1.html')
                         +e.objects-slide
-                            +profit-object(2, 'ТЦ «Город»', '10.8', '12')(data-min='1000000', data-max='12000000' data-step='200000' data-rate='10.8' data-link='object-page2.html')
+                            +profit-object(2, 'ТЦ «Город»', '10.8', '12')(data-min='1000000', data-max='12000000' data-step='200000' data-payout='99000' data-link='object-page2.html')
                         +e.objects-slide
-                            +profit-object(1, 'Пятерочка', '13', '14')(data-min='200000', data-max='19000000' data-step='100000' data-rate='13' data-link='object-page3.html')
+                            +profit-object(1, 'Пятерочка', '13', '14')(data-min='200000', data-max='19000000' data-step='100000' data-payout='44000' data-link='object-page3.html')
                         +e.objects-slide
-                            +profit-object(2, 'Перекреток', '9.2', '10')(data-min='2000000', data-max='50000000' data-step='200000' data-rate='9.2' data-link='object-page4.html')
+                            +profit-object(2, 'Перекреток', '9.2', '10')(data-min='2000000', data-max='50000000' data-step='200000' data-payout='22000' data-link='object-page4.html')
                         +e.objects-slide
-                            +profit-object(1, 'Дикси', '8', '9')(data-min='200000', data-max='8000000' data-step='100000' data-rate='8' data-link='object-page5.html')
+                            +profit-object(1, 'Дикси', '8', '9')(data-min='200000', data-max='8000000' data-step='100000' data-payout='923999' data-link='object-page5.html')
                     +e.object-link(href='#') Подробнее
