--- a/develop/blocks/index-slider/index-slider.scss
+++ b/develop/blocks/index-slider/index-slider.scss
@@ -51,6 +51,11 @@
         width: 100%;
         top: 0;
         z-index: 1;
+
+        &--static {
+          position: static;
+          margin-bottom: 12px;
+        }
     }
 
     &__image {
