--- a/develop/blocks/main-footer/main-footer.pug
+++ b/develop/blocks/main-footer/main-footer.pug
@@ -28,6 +28,9 @@ mixin main-footer()
                                 +e.LI.socials-item
                                     +e.A.socials-link(href='#')
                                         +icon('instagram')
+                                +e.LI.socials-item
+                                    +e.A.socials-link(href='#')
+                                        +icon('telegram')
                 +e.P.info
                     | Стоимость инвестиционных паев может увеличиваться и уменьшаться, результаты инвестирования в прошлом не определяют доходы в будущем, AKTIVO не гарантирует доходность инвестиций. Информация об инвестиционных фондах, объектах недвижимости, экономические показатели, а также любые аналитические и информационные данные предоставлены ООО «Активо» на правах пайщика указанных закрытых паевых инвестиционных фондов. Вся информация, содержащаяся в маркетинговых и иных материалах ООО «Активо», в том числе о будущей доходности паев ЗПИФН, является предположительной. Для более точной оценки перед принятием решения о покупке паев мы настоятельно рекомендуем самостоятельно изучать объект инвестирования или обратиться к финансовому советнику. Все финансовые расчеты и модели являются только прогнозом, за достоверность которого ООО «Активо» не несет ответственности. ООО «Активо» ни при каких обстоятельствах не гарантирует доход по паям инвестору, а также не гарантирует ликвидность паев: не обещает и не предлагает обратный выкуп паев фонда.
                 +e.P.legal © 2020 ООО «Активо». Все права защищены
