--- a/app/css/main.css
+++ b/app/css/main.css
@@ -4105,7 +4105,7 @@ th {
   width: -webkit-calc(100% - 40px);
   width: -moz-calc(100% - 40px);
   width: calc(100% - 40px);
-  max-width: 440px;
+  max-width: 548px;
   right: 20px;
   bottom: 20px;
   color: #000;
@@ -4155,6 +4155,15 @@ th {
     font-size: 16px;
     line-height: 1.2;
     font-weight: 500; }
+    .cookies-alert__text a {
+      color: #fed63f;
+      font-size: 16px;
+      text-decoration: none;
+      -webkit-transition: color 300ms ease;
+      -moz-transition: color 300ms ease;
+      transition: color 300ms ease; }
+      .cookies-alert__text a:hover {
+        color: #000; }
   .cookies-alert__footer {
     display: -webkit-box;
     display: -moz-box;
@@ -4168,23 +4177,32 @@ th {
        -moz-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between; }
-  .cookies-alert__link {
-    color: #fed63f;
-    font-size: 16px;
-    text-decoration: none;
-    -webkit-transition: color 300ms ease;
-    -moz-transition: color 300ms ease;
-    transition: color 300ms ease; }
-    .cookies-alert__link:hover {
-      color: #000; }
-  .cookies-alert__accept.btn {
-    color: #fed63f;
-    background-color: #000;
-    border-color: #000; }
+  .cookies-alert__accept {
+    display: block; }
+    .cookies-alert__accept.btn {
+      color: #fed63f;
+      background-color: #000;
+      border-color: #000; }
 
 @media (min-width: 1024px) {
   .cookies-alert {
-    padding: 30px; } }
+    padding: 30px; }
+    .cookies-alert__inner {
+      display: -webkit-box;
+      display: -moz-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+         -moz-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: justify;
+         -moz-box-pack: justify;
+          -ms-flex-pack: justify;
+              justify-content: space-between; }
+    .cookies-alert__text {
+      padding-right: 30px;
+      margin-bottom: 0; } }
 
 .custom-select {
   position: relative;
@@ -8736,6 +8754,51 @@ th {
       top: 0;
       left: 0;
       fill: #fed63f; }
+  .object-card__reserve {
+    position: relative;
+    padding: 16px 20px;
+    background-color: #fff; }
+    .object-card__reserve::before {
+      content: '';
+      position: absolute;
+      left: 20px;
+      right: 20px;
+      height: 1px;
+      top: -1px;
+      background-color: #eee; }
+  .object-card__reserve-inputs {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: -webkit-calc(100% + 8px);
+    width: -moz-calc(100% + 8px);
+    width: calc(100% + 8px);
+    margin-left: -4px;
+    margin-bottom: 12px; }
+  .object-card__reserve-input {
+    width: 50%;
+    padding: 0 4px; }
+    .object-card__reserve-input label {
+      display: block;
+      margin-bottom: 8px;
+      font-size: 9px;
+      line-height: 1.2;
+      color: #7c7c7c; }
+    .object-card__reserve-input input {
+      width: 100%;
+      padding: 7px 16px 8px;
+      color: #000;
+      font-size: 14px;
+      background-color: #fff;
+      border: 1px solid #ccc;
+      border-radius: 8px; }
+      .object-card__reserve-input input:disabled {
+        color: #7c7c7c;
+        background-color: #ececec;
+        border-color: #ececec; }
+  .object-card__reserve-btn {
+    width: 100%; }
 
 @media (min-width: 768px) {
   .object-card {
@@ -8750,7 +8813,22 @@ th {
 
 @media (min-width: 1024px) {
   .object-card {
-    z-index: 1; } }
+    z-index: 1; }
+    .object-card__reserve {
+      padding-top: 24px; }
+    .object-card__reserve-inputs {
+      width: -webkit-calc(100% + 16px);
+      width: -moz-calc(100% + 16px);
+      width: calc(100% + 16px);
+      margin-left: -8px;
+      margin-bottom: 16px; }
+    .object-card__reserve-input {
+      padding: 0 8px; }
+      .object-card__reserve-input label {
+        font-size: 10px; }
+    .object-card__reserve-btn {
+      font-size: 16px;
+      padding: 14px; } }
 
 @media (min-width: 1200px) {
   .object-card {
