--- a/develop/blocks/object-card/object-card.scss
+++ b/develop/blocks/object-card/object-card.scss
@@ -264,6 +264,68 @@
             fill: $theme-color;
         }
     }
+
+    &__reserve {
+        position: relative;
+        padding: 16px 20px;
+
+        background-color: #fff;
+
+        &::before {
+            content: '';
+            position: absolute;
+            left: 20px;
+            right: 20px;
+            height: 1px;
+            top: -1px;
+
+            background-color: #eee;
+        }
+    }
+
+    &__reserve-inputs {
+        display: flex;
+        width: calc(100% + 8px);
+        margin-left: -4px;
+        margin-bottom: 12px;
+    }
+
+    &__reserve-input {
+        width: 50%;
+        padding: 0 4px;
+
+        label {
+            display: block;
+            margin-bottom: 8px;
+
+            font-size: 9px;
+            line-height: 1.2;
+            color: $text-color-medium;
+        }
+
+        input {
+            width: 100%;
+            padding: 7px 16px 8px;
+
+            color: $text-color;
+            font-size: 14px;
+
+            background-color: #fff;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+
+            &:disabled {
+                color: $text-color-medium;
+
+                background-color: #ececec;
+                border-color: #ececec;
+            }
+        }
+    }
+
+    &__reserve-btn {
+        width: 100%;
+    }
 }
 
 @media #{$tablet} {
@@ -296,6 +358,28 @@
 
         //     border-width: 35px 0 35px 70px;
         // }
+
+        &__reserve {
+            padding-top: 24px;
+        }
+
+        &__reserve-inputs {
+            width: calc(100% + 16px);
+            margin-left: -8px;
+            margin-bottom: 16px;
+        }
+
+        &__reserve-input {
+            padding: 0 8px;
+            label {
+                font-size: 10px;
+            }
+        }
+
+        &__reserve-btn {
+          font-size: 16px;
+          padding: 14px;
+        }
     }
 }
 
